# playground

./: .gitignore  Makefile  README.md  pyproject.toml
clash/: config.example.yaml
cpp/: Makefile  avx.cpp  finite.cpp  float.cpp  init.cpp  thread_pool.cpp
cuda/: CMakeLists.txt  Makefile  README.md  add.cu  bw.md  cache.cu  common.h  conv.cu  cp_async.cu  cuda_graph.cu  float4.cu  fuse.cu  gemm.cu  gemv.cu  helloworld.cu  hgemm.cu  hgemm_llm.cu  hgemv.cu  ipc.cu  ipc_ag.cu  memcpy.cu  nccl.md  noop.cu  reduce_sum.cu  reduce_sum_dim.cu  sched.cu  sgemm.cu  sgemm_plot.py  sgemv.cu  softmax.cu  sort.cu  transpose.cu  vote.cu
cuda/src/: gemm_bench.cpp
dev/: .env  .env.example  compose.yaml
docker/dev/: .env  README.md  compose.yaml
llm/: chat.py
objc/: CMakeLists.txt  README.md  fib.m  helloworld.m
py/: async_demo.py  breakpoint.py  contextlib_demo.py  ctx_mgr.py  gil.py  learn_mock.py  thread_demo.py
pytorch/: Makefile  comm_overlap.py  dist_grad.py  dist_ops.py  flash_attn.py  fsdp_ulysses.py  gelu_gemm.py  gelu_mlp.py  grad_ckpt.py  launch_queue.py  liger.py  log_softmax_gather.py  multi_stream.py  non_blocking.py  nsys_nvtx.py  perf_gpu.py  pin_memory.py  rand_seed.py  safe_tensor_test.py  shared_prefix.py  shared_prompt.py  sp_demo.py  tp_demo.py
pytorch/custom_op/: README.md
pytorch/custom_op/conv/: README.md  conv.py  conv_ops.cu  test_conv.py
pytorch/custom_op/gemm/: README.md  gemm_ops.cpp  gemm_ops.cu  test_gemm.py
pytorch/custom_op/rms_norm/: benchmark.py  rms_norm_cuda_kernel.cu
pytorch/custom_op/weight_only/: test_weight_only.py
pytorch/custom_op/weight_only/csrc/: weight_only_gemv.cpp
pytorch/timeline/: README.md
pytorch/timeline/imagenet/: README.md
pytorch/w3/: setup.py  test_gptq.py
pytorch/w3/csrc/: gemv_w3.cpp  gemv_w3_cuda.cu
ray/: 00_task.py  01_actor.py  02_gpu_actor.py  03_gpu_group.py  04_fault_tolerance.py  load_balance.py  map_dataset.py  map_dataset_gpu.py  serve_client.py  serve_hf.py  serve_hf_fastapi.py  serve_vllm.py
rl/game-agent/: Makefile  evaluate.py  game_agent.py  test_ppo.py  train_ppo.py
rust/adder/src/: lib.rs
rust/functions/src/: main.rs
rust/llm_client/: Cargo.toml
rust/llm_client/src/: main.rs
rust/llm_proxy/: Cargo.toml
rust/llm_proxy/src/: main.rs
rust/minigrep/src/: main.rs
rust/the_book/: Cargo.toml
rust/the_book/src/: main.rs
rust/variables/src/: main.rs
src/: CMakeLists.txt  gemm.cu  gemm.h  tune.sh
ts/: README.md  async_vs_callback.ts  package-lock.json  tsconfig.json
